--- a/notes-app-client/package.json
+++ b/notes-app-client/package.json
@@ -10,16 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "dayjs": "^1.11.12",
+    "dayjs": "^1.11.13",
+    "emoji-mart": "^5.6.0",
     "firebase": "^10.12.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
-    "react-tailwindcss-datepicker": "^1.6.6",
+    "react-tailwindcss-datepicker": "^1.7.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
