--- a/notes-app-client/package.json
+++ b/notes-app-client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/typography": "^0.5.15",
     "dayjs": "^1.11.13",
     "emoji-mart": "^5.6.0",
     "firebase": "^10.12.5",
