--- a/notes-app-client/package.json
+++ b/notes-app-client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
     "react-tailwindcss-datepicker": "^1.7.2",
+    "recharts": "^2.12.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
