--- a/notes-app-client/package.json
+++ b/notes-app-client/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.2.8",
     "@tailwindcss/typography": "^0.5.15",
     "dayjs": "^1.11.13",
     "emoji-mart": "^5.6.0",
     "firebase": "^10.12.5",
     "react-colorful": "^5.6.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
     "react-tailwindcss-datepicker": "^1.7.2",
